[gd_scene load_steps=3 format=2]

[ext_resource path="res://TitleBar.gd" type="Script" id=2]
[ext_resource path="res://Theme.theme" type="Theme" id=3]

[node name="TitleBar" type="Control"]
anchor_right = 1.0
margin_bottom = 30.0
theme = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -3.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 538.0
margin_bottom = -4.0
custom_constants/separation = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MinimizeButton" type="Button" parent="HBoxContainer"]
margin_right = 30.0
margin_bottom = 26.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
text = "_"

[node name="CloseButton" type="Button" parent="HBoxContainer"]
modulate = Color( 1, 0, 0, 1 )
margin_left = 31.0
margin_right = 62.0
margin_bottom = 26.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="gui_input" from="." to="." method="_on_TitleBar_gui_input"]
[connection signal="gui_input" from="PanelContainer" to="." method="_on_PanelContainer_gui_input"]
[connection signal="pressed" from="HBoxContainer/MinimizeButton" to="." method="_on_MinimizeButton_pressed"]
[connection signal="pressed" from="HBoxContainer/CloseButton" to="." method="_on_CloseButton_pressed"]
